--- a/src/main/webapp/revenue_reports/revenue_report.xhtml
+++ b/src/main/webapp/revenue_reports/revenue_report.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/revenue_reports/index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
                 <h:form>
 
