--- a/src/main/webapp/reportLab/report_lab.xhtml
+++ b/src/main/webapp/reportLab/report_lab.xhtml
@@ -11,56 +11,62 @@
         <ui:composition template="/resources/template/template.xhtml">
             <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
             <ui:define name="content">
+                <p:panel header="Lab Report">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <h:form>
+                                <p:accordionPanel activeIndex="#{commonReport.manageLabReportIndex}">
+                                    <p:ajax process="@this"></p:ajax>
+                                    <p:tab title=" Lab Investigation With Credit" >
+                                        <div class="d-grid gap-2">  
 
-                <h:form>
-                    <p:panel header="Lab Report">
-                        <p:tabView orientation="left" > 
+                                            <p:commandButton class="w-100" ajax="false" value="Investigation Month End Detail" action="report_lab_investigation_month_end_detail"/>
+                                        </div>
+                                    </p:tab>
 
-                            <p:tab title=" Lab Investigation With Credit" >
-                                <h:panelGrid columns="1" >  
+                                    <p:tab title=" Lab Investigation Without Credit" >
+                                        <div class="d-grid gap-2">  
 
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Investigation Month End Detail" action="report_lab_investigation_month_end_detail"/>
-                                </h:panelGrid>
-                            </p:tab>
+                                            <p:commandButton class="w-100" ajax="false" value="Month end Details without credit" action="report_lab_investigation_month_end_detail_without_credit.xhtml"/>
+                                            <p:commandButton class="w-100" ajax="false" value="Month end Summary without credit" action="report_lab_investigation_month_end_summery_without_credit.xhtml"/>
+                                        </div>
+                                    </p:tab>
 
-                            <p:tab title=" Lab Investigation Without Credit" >
-                                <h:panelGrid columns="1" >  
+                                    <p:tab title=" Investigation Counts" >
+                                        <div class="d-grid gap-2">
 
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Month end Details without credit" action="report_lab_investigation_month_end_detail_without_credit.xhtml"/>
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Month end Summary without credit" action="report_lab_investigation_month_end_summery_without_credit.xhtml"/>
-                                </h:panelGrid>
-                            </p:tab>
+                                            <p:commandButton class="w-100" ajax="false" 
+                                                             value="Fees for outside institutions" 
+                                                             action="#{commonReport.displayOutsideBillFees()}"/>
 
+                                            <p:commandButton class="w-100" ajax="false" 
+                                                             value="Investigation Counts by Institution And Collecting Centre" 
+                                                             action="#{investigationMonthSummeryOwnController.ixCountByInstitutionAndCollectingCentre()}"/>
+                                            <p:commandButton class="w-100" ajax="false" value="Machine Count" action="count_by_machine"/>
+                                            <p:commandButton class="w-100" ajax="false" value="Machine Count By Bill Type" action="count_by_machine_and_bill_type"/>
+                                            <p:commandButton class="w-100" ajax="false" value="Machine and Investigation Count By Bill Type" action="count_by_machine_and_item"/>
+                                        </div>
+                                    </p:tab>
 
+                                    <p:tab title=" Lab Investigation Bill List" >
+                                        <div class="d-grid gap-2">
 
-                            <p:tab title=" Investigation Counts" >
-                                <h:panelGrid columns="1" >  
+                                            <p:commandButton class="w-100" ajax="false" value="Investigation Bill List" action="report_lab_investigation_bill_list.xhtml"/>
+                                        </div>
+                                    </p:tab>
+                                </p:accordionPanel>
+                            </h:form>
+                        </div>
 
-                                    <p:commandButton styleClass="linkButton" ajax="false" 
-                                                     value="Fees for outside institutions" 
-                                                     action="#{commonReport.displayOutsideBillFees()}"/>
+                        <div class="col-md-9">
+                            <ui:insert name="subcontent" >
 
-                                    <p:commandButton styleClass="linkButton" ajax="false" 
-                                                     value="Investigation Counts by Institution And Collecting Centre" 
-                                                     action="#{investigationMonthSummeryOwnController.ixCountByInstitutionAndCollectingCentre()}"/>
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Machine Count" action="count_by_machine"/>
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Machine Count By Bill Type" action="count_by_machine_and_bill_type"/>
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Machine and Investigation Count By Bill Type" action="count_by_machine_and_item"/>
-                                </h:panelGrid>
-                            </p:tab>
+                            </ui:insert>
+                        </div>
+                    </div>
 
-                            <p:tab title=" Lab Investigation Bill List" >
-                                <h:panelGrid columns="1" >  
-
-                                    <p:commandButton styleClass="linkButton" ajax="false" value="Investigation Bill List" action="report_lab_investigation_bill_list.xhtml"/>
-                                </h:panelGrid>
-                            </p:tab>
-
-                        </p:tabView>
-
-
-                    </p:panel>
-                </h:form>
+                    
+                </p:panel>
             </ui:define>
 
 
@@ -68,3 +74,7 @@
 
     </h:body>
 </html>
+
+
+
+
