Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/credit/cash_inward_access.xhtml
+++ b/src/main/webapp/credit/cash_inward_access.xhtml
@@ -8,8 +8,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/credit/index_inward_due_access.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel>
                     <f:facet name="header">
