--- a/src/main/webapp/credit/index_inward_due_access.xhtml
+++ b/src/main/webapp/credit/index_inward_due_access.xhtml
@@ -12,34 +12,49 @@
 
             <ui:define name="content">
 
-                <h:form>
-                    <p:panel header="Inward Dues And Access">
-                        <p:tabView orientation="left" > 
+                <p:panel header="Inward Dues And Access">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <h:form>
+                                <p:accordionPanel activeIndex="#{creditCompanyDueController.manageInwardDueAndAccessIndex}">
+                                    <p:ajax process="@this"></p:ajax>
+                                    <p:tab title=" Dues" >
+                                        <div class="d-grid gap-2">
 
-                            <p:tab title=" Dues" >
-                                <h:panelGrid columns="1" >  
+
+                                            <p:commandButton action="/credit/inward_due_search" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search" ajax="false" class="w-100"  />
+                                            <p:commandButton action="/credit/inward_due_search_credit_company" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search(Credit Company)" ajax="false" class="w-100"  />
+                                            <p:commandButton  action="/credit/inward_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" class="w-100" onclick="onSubmitButton();"/>
+                                            <p:commandButton  action="/credit/inward_due_age_credit_company_detail" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age Detail" ajax="false" class="w-100" onclick="onSubmitButton();"/>
+                                            <p:commandButton  action="/credit/inward_due_age_credit_company" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age(Credit Company)" ajax="false" class="w-100" onclick="onSubmitButton();"/>                            
+                                        </div>
+                                    </p:tab>
+
+                                    <p:tab title=" Excess" >
+                                        <div class="d-grid gap-2">
+
+                                            <p:commandButton action="/credit/credit_company_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  class="w-100" onclick="onSubmitButton();"/>
+                                            <p:commandButton   action="/credit/credit_company_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" class="w-100" />
+                                            <p:commandButton action="/credit/cash_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  class="w-100" onclick="onSubmitButton();"/>
+                                            <p:commandButton   action="/credit/cash_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" class="w-100" />
+                                        </div>
+                                    </p:tab>
+                                </p:accordionPanel>
+                            </h:form>
+                        </div>
+
+                        <div class="col-md-9">
+                            <ui:insert name="subcontent" >
+
+                            </ui:insert>
+                        </div>
+                    </div>
 
 
-                                    <p:commandButton action="/credit/inward_due_search" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
-                                    <p:commandButton action="/credit/inward_due_search_credit_company" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search(Credit Company)" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
-                                    <p:commandButton  action="/credit/inward_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>
-                                    <p:commandButton  action="/credit/inward_due_age_credit_company_detail" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age Detail" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>
-                                    <p:commandButton  action="/credit/inward_due_age_credit_company" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age(Credit Company)" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>                            
-                                </h:panelGrid>
-                            </p:tab>
 
-                            <p:tab title=" Excess" >
-                                <h:panelGrid columns="1" >  
 
-                                    <p:commandButton action="/credit/credit_company_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
-                                    <p:commandButton   action="/credit/credit_company_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
-                                    <p:commandButton action="/credit/cash_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
-                                    <p:commandButton   action="/credit/cash_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
-                                </h:panelGrid>
-                            </p:tab>
-                        </p:tabView>
-                    </p:panel>
-                </h:form>
+                </p:panel>
+
             </ui:define>
 
 
