--- a/src/main/webapp/credit/credit_company_opd_due_by_bill_item.xhtml
+++ b/src/main/webapp/credit/credit_company_opd_due_by_bill_item.xhtml
@@ -9,8 +9,8 @@
       xmlns:au="http://java.sun.com/jsf/composite/autocomplete">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/credit/index_opd_due_access.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel>
                         <f:facet name="header">
