--- a/src/main/webapp/credit/index_opd_due_access.xhtml
+++ b/src/main/webapp/credit/index_opd_due_access.xhtml
@@ -12,32 +12,47 @@
 
             <ui:define name="content">
 
-                <h:form>
-                    <p:panel header="OPD Dues and Access">
-                        <p:tabView orientation="left" > 
 
-                            <p:tab title=" OPD Credit Due" >
-                                <h:panelGrid columns="1" >  
-
-
-                                    <p:commandButton action="/credit/credit_company_opd_due" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
-                                    <p:commandButton action="/credit/credit_company_opd_due_by_bill_item" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search (Bill Item)" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
-                                    <p:commandButton  action="/credit/credit_company_opd_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>
-                                </h:panelGrid>
-                            </p:tab>
+                <p:panel header="OPD Dues and Access">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <h:form>
+                                <p:accordionPanel activeIndex="#{creditCompanyDueController.manageInwardDueAndAccessIndex}">
+                                    <p:ajax process="@this"></p:ajax>
+                                    <p:tab title=" OPD Credit Due" >
+                                        <div class="d-grid gap-2"> 
 
 
-                            <p:tab title=" OPD Credit Excess" >
-                                <h:panelGrid columns="1" > 
+                                            <p:commandButton action="/credit/credit_company_opd_due" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search" ajax="false" class="w-100" onclick="onSubmitButton();"  />
+                                            <p:commandButton action="/credit/credit_company_opd_due_by_bill_item" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search (Bill Item)" ajax="false" class="w-100" onclick="onSubmitButton();"  />
+                                            <p:commandButton  action="/credit/credit_company_opd_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" class="w-100" onclick="onSubmitButton();"/>
+                                        </div>
+                                    </p:tab>
 
-                                    <p:commandButton action="/credit/credit_company_opd_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
-                                    <p:commandButton   action="/credit/credit_company_opd_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
-                                </h:panelGrid>
-                            </p:tab>
-                        </p:tabView>
 
-                    </p:panel>                    
-                </h:form>
+                                    <p:tab title=" OPD Credit Excess" >
+                                        <div class="d-grid gap-2">
+
+                                            <p:commandButton action="/credit/credit_company_opd_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  class="w-100" onclick="onSubmitButton();"/>
+                                            <p:commandButton   action="/credit/credit_company_opd_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" class="w-100" onclick="onSubmitButton();" />
+                                        </div>
+                                    </p:tab>
+                                </p:accordionPanel>
+                            </h:form>
+                        </div>
+
+                        <div class="col-md-9">
+                            <ui:insert name="subcontent" >
+
+                            </ui:insert>
+                        </div>
+                    </div>
+
+
+
+
+                </p:panel>                    
+
             </ui:define>
 
 
