--- a/src/main/webapp/credit/credit_company_pharmacy_due_age.xhtml
+++ b/src/main/webapp/credit/credit_company_pharmacy_due_age.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/credit/index_pharmacy_due_access.xhtml">
+            <ui:define name="subcontent">
                 <h:form>            
                     <p:commandButton id="btnSearch" ajax="false" value="Process Due Age" action="#{creditCompanyDueController.createAgeTablePharmacy()}" onclick="onSubmitButton();" />
                     <p:defaultCommand target="btnSearch"/>
