Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/dataAdmin/pharmacy_item_list.xhtml
+++ b/src/main/webapp/dataAdmin/pharmacy_item_list.xhtml
@@ -8,8 +8,8 @@
 
     <h:body>
 
-        <ui:composition template="././resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/dataAdmin/report_entered_data.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Pharmacy Item List">
                         <h:panelGrid columns="2">
