--- a/src/main/webapp/dataAdmin/deleted_distributors.xhtml
+++ b/src/main/webapp/dataAdmin/deleted_distributors.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/dataAdmin/report_entered_data.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
 
                     <p:panel header="Deleted Distributors">
