--- a/src/main/webapp/patient_registration_1.xhtml
+++ b/src/main/webapp/patient_registration_1.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/dataAdmin/report_entered_data.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
 
                 <h:outputStylesheet library="css" name="printing.css" ></h:outputStylesheet>
 
