Signed-off-by: Buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -16,7 +16,8 @@
                         <p:inputText value="#{smsController.message}" ></p:inputText>
                         <p:outputLabel value="Number" ></p:outputLabel>
                         <p:inputText value="#{smsController.number}" ></p:inputText>
-                        <p:commandButton ajax="false" value="Sned SMS" action="#{smsController.sendSmsForPatientReport()}" >
+                        <p:commandButton ajax="false" value="Sned SMS" 
+                                         action="#{smsController.sendSmsForPatientReport()}" >
                         </p:commandButton>
                     </p:panelGrid>
                 </h:form>
