--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_for_cashier.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_for_cashier.xhtml
@@ -26,10 +26,9 @@
 
                     <p:panel rendered="#{!pharmacySaleController.billPreview}"  >
 
-
-                        <h:panelGrid id="sale" columns="2" class="alignTop" >
-
-                            <p:panel style="background-color: grey;" >
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p:panel style="background-color: grey;" >
                                 <f:facet name="header" >
                                     <h:outputLabel value="Pharmacy Retail Bill" />
                                 </f:facet>
@@ -280,8 +279,10 @@
                                 </p:panel> 
 
                             </p:panel>
-
-                            <p:panel>
+                            </div>
+                            
+                            <div class="col-md-6">
+                                 <p:panel>
 
 
                                 <f:facet name="header" >
@@ -458,8 +459,8 @@
 
 
                             </p:panel>
-
-                        </h:panelGrid>
+                            </div>
+                        </div>
 
                     </p:panel>
 
