--- a/src/main/webapp/pharmacy/pharmacy_report_transfer_issue_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_transfer_issue_bill.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/pharmacy/pharmacy_report_transfer.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
 
                     <p:panel header="Detailed Transfer Listing (Do not consider receieve) - By Bills" >
