Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_report_transfer_receive_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_transfer_receive_bill.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/pharmacy/pharmacy_report_transfer.xhtml">
+        <ui:composition template="/resources/template/template.xhtml">
 
-            <ui:define name="subcontent">
+            <ui:define name="content">
                 <h:form>
 
 
