--- a/src/main/webapp/pharmacy/item_supplier_prices.xhtml
+++ b/src/main/webapp/pharmacy/item_supplier_prices.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/pharmacy/pharmacy_reports_index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="Item List with Suppliers and Latest Rates" >
                         <p:commandButton ajax="false" value="Excel">
