--- a/src/main/webapp/pharmacy/list_of_all_sale_bills.xhtml
+++ b/src/main/webapp/pharmacy/list_of_all_sale_bills.xhtml
@@ -9,9 +9,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/pharmacy/pharmacy_reports_index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
 
                     <p:panel header="All Sale Bill" >
