--- a/src/main/webapp/pharmacy/pharmacy_report_adjustment_bill_for_stock_taking.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_adjustment_bill_for_stock_taking.xhtml
@@ -9,8 +9,8 @@
       xmlns:au="http://java.sun.com/jsf/composite/autocomplete">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/pharmacy/pharmacy_reports_index.xhtml">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel>
                         <f:facet name="header" >
