--- a/src/main/webapp/pharmacy/pharmacy_report_institution_movement.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_institution_movement.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/pharmacy/pharmacy_reports_index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
 
                     <p:panel header="Institution Item Movement and Stock" >
