--- a/src/main/webapp/pharmacy/pharmacy_report_list_grater_than_one_distributor.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_list_grater_than_one_distributor.xhtml
@@ -7,9 +7,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml">
+        <ui:composition template="/pharmacy/pharmacy_reports_index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 <h:form>
                     <p:panel header="List Items One Item Has More Than One Distributor" >
                         <p:commandButton ajax="false" value="Excel">
